applications/jvclaw/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jvclaw
  labels:
    name: jvclaw
